  created when exporting in HDF4 or HDF5 format.

* String attributes in HDF5 files can now be empty strings (using H5S_NULL).

* Allow HARP to import HDF5 files that are generated by the netCDF4 library
  (allow numeric attributes to be 1-element arrays instead of scalars).

* harpcheck now returns with exit code 1 if any of the imports fail.

* Fixed performance issue with spatial filtering on systems with slow math lib.

* Fixed mapping description of GOME2 L1 product ingestion.

* Fixed wrong results of area overlap calculation.

* Replaced '_' by '-' in long versions of argument names of harpcollocate.

* Added support for dfs (degrees of freedom for signal) profiles.

* Updates to S5P L2 product ingestions.

1.1 2017-11-06
~~~~~~~~~~~~~~

* Parameters that required a file or a directory as dataset reference can now
  also take a file with a .pth extension as input. This file should contain a
  line-separated list of paths to files and/or directories of the dataset.

* Specifying a directory for a dataset will now recursively add all products
  (including sub-directories and contents of .pth files).

* The variable that is binned on with a 'bin(variable)' operation is now
  always kept in the resulting product.

* The bin() operation can now handle 'count' variables (summing it if present
  and creating it otherwise).

* Fixed issue where collocate filter operation on a product with a single
  sample could end in an infinite loop.

* Fixed issue in harpcollocate when providing a -nx option without a -ny.

* Fixed issue with wrap() operation for values < specified minimum.

* Fixed issue with collocate_left/collocate_right operations not including
  last sample when applying it on products in an external format.

* harpcollocate now ignores empty products instead of raising errors for them.

* Added -oa/-ob and -aa/-ab options to harpcollocate matchup.

* Added solar_declination_angle and solar_hour_angle variables and derivations.
